[package]
name = "hyper-delay-server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "sync", "time", "net", "io-util"] }
bytes = "1.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11"
tokio-util = { version = "0.7", features = ["codec"] }
anyhow = "1.0"
thiserror = "1.0"
sled = "0.34"
lz4_flex = { version = "0.11", features = ["std"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.10", features = ["v4", "fast-rng", "serde"] }
